--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -68,7 +68,7 @@ body {
 }
 
 .super {
-	height: 600px;
+	padding-bottom: 100px;
 }
 
 .price-footer {
@@ -98,7 +98,6 @@ body {
 @media (max-width: 700px) {
 	.prices-box {
 		width: 80%;
-		margin: auto;
 	}
 
 	.price {
@@ -108,5 +107,9 @@ body {
 
 	.btn-price {
 		margin-bottom: 10px;
+	}
+
+	.super {
+		padding-bottom: 0;
 	}
 }
